--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,10 @@ jobs:
       - image: circleci/ruby:2.3
     steps:
       - checkout
-      - run: mkdir coverage-local
+      - run: mkdir shared-coverage
       - persist_to_workspace:
           root: ~/project
-          paths: coverage-local
+          paths: shared-coverage
   test1:
     docker:
       - image: circleci/ruby:2.3
@@ -16,15 +16,11 @@ jobs:
       - checkout
       - attach_workspace:
           at: ~/project
-      - run: gcov --version || true
-      - run: g++ --version || true
-      - run: g++ --coverage test1.cpp
-      - run: ./a.out
-      - run: ls -lah
-      - run: mv *.gcda coverage-local && mv *.gcno coverage-local
+      - run: g++ --coverage test1.cpp && ./a.out
+      - run: mv *.gcda shared-coverage && mv *.gcno shared-coverage
       - persist_to_workspace:
           root: ~/project
-          paths: coverage-local
+          paths: shared-coverage
   test2:
     docker:
       - image: circleci/ruby:2.3
@@ -32,15 +28,11 @@ jobs:
       - checkout
       - attach_workspace:
           at: ~/project
-      - run: gcov --version || true
-      - run: g++ --version || true
-      - run: g++ --coverage test2.cpp
-      - run: ./a.out
-      - run: ls -lah
-      - run: mv *.gcda coverage-local && mv *.gcno coverage-local
+      - run: g++ --coverage test2.cpp && ./a.out
+      - run: mv *.gcda shared-coverage && mv *.gcno shared-coverage
       - persist_to_workspace:
           root: ~/project
-          paths: coverage-local
+          paths: shared-coverage
   test3:
     docker:
       - image: circleci/ruby:2.3
@@ -48,53 +40,41 @@ jobs:
       - checkout
       - attach_workspace:
           at: ~/project
-      - run: gcov --version || true
-      - run: g++ --version || true
-      - run: g++ --coverage test3.cpp
-      - run: ./a.out
-      - run: ls -lah
-      - run: mv *.gcda coverage-local && mv *.gcno coverage-local
+      - run: g++ --coverage test3.cpp && ./a.out
+      - run: mv *.gcda shared-coverage && mv *.gcno shared-coverage
       - persist_to_workspace:
           root: ~/project
-          paths: coverage-local
+          paths: shared-coverage
   gather:
     docker:
       - image: circleci/ruby:2.3
     steps:
       - checkout
-      - run: gem install coveralls-lcov
-      - run: sudo apt-get install jq
 #      - run: curl -fLO https://sourceforge.net/projects/ltp/files/Coverage%20Analysis/LCOV-1.12/lcov-1.12.tar.gz || curl -fLO https://downloads.sourceforge.net/project/ltp/Coverage%20Analysis/LCOV-1.12/lcov-1.12.tar.gz || wget http://sourceforge.mirrorservice.org/l/project/lt/ltp/Coverage%20Analysis/LCOV-1.12/lcov-1.12.tar.gz || wget -O lcov-1.12.tar.gz http://launchpad.net/ubuntu/+archive/primary/+files/lcov_1.12.orig.tar.gz
 #      - run: tar xvzf lcov-1.12.tar.gz
 #      - run: cd lcov-1.12 && sudo make install
       - run: sudo apt-get install lcov
-      - run: pwd
-      - run: lcov --version || true
-      - run: gcov --version || true
-      - run: g++ --version || true
-      - run: coveralls-lcov --version || true
-      - run: jq --version || true
-      - run: curl --version || true
 
       - attach_workspace:
           at: ~/project
-      - run: ls -lah coverage-local
-      - run: lcov --gcov-tool=gcov --rc lcov_branch_coverage=1 --directory coverage-local --base-directory . --capture --output-file coverage-local/coverage.info
-#      - run: lcov --gcov-tool=gcov --rc lcov_branch_coverage=1 --remove coverage-local/coverage.info "/usr*" "*/libs/geometry/*" -o coverage-local/coverage.info
+      - run: ls -lah shared-coverage
+      - run: lcov --gcov-tool=gcov --rc lcov_branch_coverage=1 --directory shared-coverage --base-directory . --capture --output-file shared-coverage/coverage.info
+#      - run: lcov --gcov-tool=gcov --rc lcov_branch_coverage=1 --remove shared-coverage/coverage.info "/usr*" "*/libs/geometry/*" -o shared-coverage/coverage.info
 
 #Coveralls
-      - run: coveralls-lcov --repo-token=$COVERALLS_REPO_TOKEN -v -n coverage-local/coverage.info > coverage-local/coverage.json
+      - run: gem install coveralls-lcov
+      - run: sudo apt-get install jq
+      - run: coveralls-lcov --repo-token=$COVERALLS_REPO_TOKEN -v -n shared-coverage/coverage.info > shared-coverage/coverage.json
 # not possible with workspaces
 # | .service_number = \"$CIRCLE_BUILD_NUM\"
-      - run: jq -c ".service_name = \"circle-ci\" | .git .branch =\"$CIRCLE_BRANCH\"" coverage-local/coverage.json > coverage-local/processed.json
-      - run: ls -lah coverage-local
-      - run: curl --retry 3 -F "json_file=@coverage-local/processed.json" 'https://coveralls.io/api/v1/jobs'
+      - run: jq -c ".service_name = \"circle-ci\" | .git .branch =\"$CIRCLE_BRANCH\"" shared-coverage/coverage.json > shared-coverage/processed.json
+      - run: ls -lah shared-coverage
+      - run: curl --retry 3 -F "json_file=@shared-coverage/processed.json" 'https://coveralls.io/api/v1/jobs'
 
 #Codecov
       - run: curl -s https://codecov.io/bash > .codecov
       - run: chmod +x .codecov
-      - run: ./.codecov --help
-      - run: ./.codecov -t $CODECOV_TOKEN -f coverage-local/coverage.info -x gcov
+      - run: ./.codecov -t $CODECOV_TOKEN -f shared-coverage/coverage.info -x gcov
 
 workflows:
   version: 2
